--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "express": "3.0.0rc2",
     "jade": "*",
     "stylus": "*",
-    "coffee-script": "~1.3.3"
+    "coffee-script": "~1.3.3",
+    "express-namespace": "~0.1.1"
   },
   "devDependencies": {
     "should": "~1.1.0",
