--- a/package.json
+++ b/package.json
@@ -1,7 +1,4 @@
 {
-  "name": "application-name",
-  "version": "0.0.1",
-  "private": true,
   "scripts": {
     "test": "./node_modules/.bin/mocha",
     "start": "node app.js",
@@ -15,11 +12,18 @@
     "coffee-script": "~1.3.3",
     "express-namespace": "~0.1.1",
     "connect-assets": "~2.2.1",
-    "mongoose": "~3.0.1"
+    "mongoose": "~3.0.1",
+    "i18n": "~0.3.5"
   },
   "devDependencies": {
     "should": "~1.1.0",
     "mocha": "~1.3.2",
     "node-dev": "~0.2.5"
+  },
+  "name": "JSJRiskmanager",
+  "subdomain": "moose.jsjriskmanager",
+  "version": "0.0.1",
+  "engines": {
+    "node": "0.6.x"
   }
 }
